# ROS_N3

ex01/full_name_service/: CMakeLists.txt  package.xml
ex01/full_name_service/src/: client_name.cpp  service_name.cpp
ex02/action_turtle_commands/: CMakeLists.txt  package.xml
ex02/action_turtle_commands/src/: action_turtle_client.cpp  action_turtle_server.cpp
ex02/action_turtle_commands_dop/: CMakeLists.txt  package.xml
ex02/install/: local_setup.sh  setup.sh
ex02/log/: latest_build
ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
ex03/rosbag2_2024_10_29-14_22_47/: metadata.yaml  rosbag2_2024_10_29-14_22_47_0.db3
ex04/: doctor.txt
ex05/move_to_goal/: CMakeLists.txt  package.xml
ex05/move_to_goal/src/: move_to_goal.cpp
